feat: refine reader interactions
